# Billie

./: README.md
splitter-backend/: .env.example  Makefile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_each_function.py.ipynb
splitter-backend/backend/: .env  alembic.ini
splitter-backend/backend/app/: crud.py  dependencies.py  main.py  schemas.py
splitter-backend/backend/app/api/v1/: api_router.py  expenses.py  groups.py  health.py
splitter-backend/backend/app/auth/: router.py  security.py
splitter-backend/backend/app/core/: config.py  db.py  redis.py
splitter-backend/backend/app/crud/: crudExpense.py  crudGroup.py  crudUser.py
splitter-backend/backend/app/models/: __init__.py  base.py  bridge_tables.py  expense.py  group.py  user.py
splitter-backend/backend/migrations/: env.py
splitter-backend/backend/tests/: test_health.py
splitter-backend/splitter_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
